# todoist-term

./: LICENSE  README.md  stack.yaml
todoist-api/: todoist-api.cabal  todoist-sync-api-v8.yml
todoist-api/src/Todoist/API/: Sync.hs
todoist-api/src/Todoist/API/Internal/: Sync.hs
todoist-api/src/scraper/: Main.hs
todoist-brick/: todoist-brick.cabal
