name:                todoist-brick
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/balajirrao/todoist-term#readme
license:             BSD3
license-file:        LICENSE
author:              Balaji Rao
maintainer:          balajirrao@gmail.com
copyright:           2020 Balaji Rao
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable todoist-brick
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5